# IDW-SoSe-2026

./: .env.example  .gitignore  DIY_LAB_IDEEN.md  EXTENDING.md  SETUP.md  agent_builder.py  agents.ipynb  gradio_ui.py  main.py  openrouter.py  pyproject.toml  requirements.txt  settings.py  tools.py
